fix(hot): avoid deprecated overflow value

--- a/src/styles/base/_root.scss
+++ b/src/styles/base/_root.scss
@@ -3,17 +3,14 @@
 :root {
 	min-height: 100vh;
 	overflow-x: hidden;
+	overflow-y: auto;
 	font-size: 62.5%;
 }
 
-html {
-	overflow-y: overlay;
-}
 
 body {
-	min-height: 100vh;
+	min-height: 100%;
 	margin: 0;
-	overflow-x: hidden;
 	font-family: $font-family-primary;
 	font-size: $font-size-base;
 	line-height: $line-height-lg;
